--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/ProfileViewController/ProfileViewController.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/ProfileViewController/ProfileViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -8,6 +8,11 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Inter-V.ttf">
+            <string>InterV</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileViewController" customModule="Internship2022TeamSzabi" customModuleProvider="target">
             <connections>
@@ -16,11 +21,104 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log out" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b0Y-Fc-HkG" userLabel="Logout Label">
+                    <rect key="frame" x="25" y="848.33333333333337" width="78" height="28.666666666666629"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7QD-pe-MBe">
+                    <rect key="frame" x="0.0" y="44" width="428" height="796"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3eq-Ik-NWg">
+                            <rect key="frame" x="42" y="162" width="344" height="515.66666666666663"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Student ID" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7d4-kr-c05">
+                                    <rect key="frame" x="20.000000000000007" y="357.33333333333331" width="109.66666666666669" height="27.666666666666686"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="2951110000000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gU1-Is-bH2" userLabel="PersonalID  Number Label">
+                                    <rect key="frame" x="20.000000000000007" y="306.33333333333331" width="124.66666666666669" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Protopopescu V. ovidiu eduard" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1o6-ZL-fPi" userLabel="Name Label">
+                                    <rect key="frame" x="94" y="190" width="230" height="57.333333333333314"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="230" id="c6Z-NG-LpP"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="InterV" family="Inter V" pointSize="25"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="678934" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1uV-mw-7Fe">
+                                    <rect key="frame" x="20" y="390" width="61" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aVM-Lc-mJK">
+                                    <rect key="frame" x="139" y="20" width="140" height="140"/>
+                                    <color key="backgroundColor" red="0.61960786580000005" green="0.47058826679999999" blue="0.77647060160000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="aVM-Lc-mJK" secondAttribute="height" id="m9d-hH-nT9"/>
+                                        <constraint firstAttribute="height" constant="140" id="zSI-dd-2AA"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Personal ID" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lnv-bM-cfM" userLabel="PersonalID Label">
+                                    <rect key="frame" x="20" y="277.33333333333331" width="99" height="24"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Email" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QTk-in-hJV">
+                                    <rect key="frame" x="20" y="441" width="56" height="28.666666666666629"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="blabla@batman.com" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="THM-du-K3m">
+                                    <rect key="frame" x="20" y="474.66666666666663" width="156" height="21"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="21" id="xHA-XF-gQ3"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="1o6-ZL-fPi" firstAttribute="top" secondItem="aVM-Lc-mJK" secondAttribute="bottom" constant="30" id="0BI-g9-FJC"/>
+                                <constraint firstItem="gU1-Is-bH2" firstAttribute="top" secondItem="lnv-bM-cfM" secondAttribute="bottom" constant="5" id="5mx-p3-t9l"/>
+                                <constraint firstItem="1uV-mw-7Fe" firstAttribute="top" secondItem="7d4-kr-c05" secondAttribute="bottom" constant="5" id="BUN-Ki-xcr"/>
+                                <constraint firstItem="THM-du-K3m" firstAttribute="top" secondItem="QTk-in-hJV" secondAttribute="bottom" constant="5" id="PFL-1H-Gxg"/>
+                                <constraint firstItem="1o6-ZL-fPi" firstAttribute="centerX" secondItem="3eq-Ik-NWg" secondAttribute="centerX" constant="37" id="THi-7W-YwL"/>
+                                <constraint firstItem="QTk-in-hJV" firstAttribute="top" secondItem="1uV-mw-7Fe" secondAttribute="bottom" constant="30" id="wbk-if-zAH"/>
+                                <constraint firstItem="aVM-Lc-mJK" firstAttribute="centerX" secondItem="3eq-Ik-NWg" secondAttribute="centerX" constant="37" id="wtg-ZC-wMh"/>
+                                <constraint firstItem="lnv-bM-cfM" firstAttribute="top" secondItem="1o6-ZL-fPi" secondAttribute="bottom" constant="30" id="zVJ-qT-ZaR"/>
+                                <constraint firstItem="7d4-kr-c05" firstAttribute="top" secondItem="gU1-Is-bH2" secondAttribute="bottom" constant="30" id="zz1-WG-BtP"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <viewLayoutGuide key="contentLayoutGuide" id="Wri-Gr-t7C"/>
+                    <viewLayoutGuide key="frameLayoutGuide" id="2tu-2z-tZj"/>
+                </scrollView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <point key="canvasLocation" x="132" y="126"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="b0Y-Fc-HkG" secondAttribute="bottom" constant="15" id="ORr-1Y-TUn"/>
+                <constraint firstItem="b0Y-Fc-HkG" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="25" id="y8T-Cq-dea"/>
+            </constraints>
+            <point key="canvasLocation" x="473.83177570093454" y="126.99784017278618"/>
         </view>
     </objects>
     <resources>
