--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/ProfileViewController/ProfileViewController.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/ProfileViewController/ProfileViewController.xib
@@ -33,10 +33,10 @@
                     <color key="textColor" name="ProfileLogoutButtonColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" canCancelContentTouches="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7QD-pe-MBe">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" canCancelContentTouches="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7QD-pe-MBe">
                     <rect key="frame" x="0.0" y="44" width="428" height="788.66666666666663"/>
                     <subviews>
-                        <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="3eq-Ik-NWg">
+                        <view clipsSubviews="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="3eq-Ik-NWg">
                             <rect key="frame" x="0.0" y="0.0" width="428" height="788.66666666666663"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Student ID" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7d4-kr-c05">
